Add support for persistent data via MySQL database - Re-created this Spring Boot App using Spring Initializr in VS Code, only change being replacing Apache Derby DB with the MySQL driver dependency. Copied all the src code packages into this project     -- MySQL enables the DB tables and records to persist even after the app stops running.     -- MySQL would need to be setup on your system as explained in this guide https://spring.io/guides/gs/accessing-data-mysql/ to get this app to function properly.     -- In application.properties, spring.jpa.show-sql is set to true to enable printing of the Hibernate SQL commands. This is optional and can be commented out. - All CRUD operations were tested and validated both from the API requests and externally from the MySQL workbench app / MySQL console. - No functional changes to the resources format or to the REST endpoints.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.desmondawung.springbootstarter</groupId>
+	<groupId>com.desmondawung.courseapi</groupId>
 	<artifactId>course-api-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>course-api-data</name>
@@ -29,8 +29,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
