--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/course_api_db
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
